added all required software for pcf dwevelopment

--- a/roles/pcf/defaults/main.yml
+++ b/roles/pcf/defaults/main.yml
@@ -1,2 +1,28 @@
 ---
 user: ubuntu
+
+om_cli:
+  repository: pivotal-cf/om
+  install_location: /usr/local/bin/om
+
+pivnet_cli:
+  repository: pivotal-cf/pivnet-cli
+  install_location: /usr/local/bin/pivnet
+
+bbl_cli:
+  repository: cloudfoundry/bosh-bootloader
+  install_location: /usr/local/bin/bbl
+
+bosh_cli:
+  repository: cloudfoundry/bosh-cli
+  install_location: /usr/local/bin/bosh
+  
+cf_cli:
+  install_location: /usr/local/bin
+
+terraform_cli:
+  install_location: /usr/local/bin
+
+packer_cli:
+  install_location: /usr/local/bin
+
