--- a/roles/pcf/tasks/main.yml
+++ b/roles/pcf/tasks/main.yml
@@ -1,3 +1,4 @@
+---
 - name: install apt packages
   apt:
     name:
@@ -7,3 +8,37 @@
 
 - name: install and configure vim
   include: vim/install.yml
+
+- name: install om cli
+  include: install-github-release.yml
+  vars:
+    repository: "{{om_cli.repository}}"
+    install_location: "{{om_cli.install_location}}"
+
+- name: install pivnet cli
+  include: install-github-release.yml
+  vars:
+    repository: "{{pivnet_cli.repository}}"
+    install_location: "{{pivnet_cli.install_location}}"
+
+- name: install bbl cli
+  include: install-github-release.yml
+  vars:
+    repository: "{{bbl_cli.repository}}"
+    install_location: "{{bbl_cli.install_location}}"
+
+- name: install bosh cli
+  include: install-bosh-cli.yml
+
+- name: install cf cli
+  include: install-cf-cli.yml
+
+- name: isntall terraform cli
+  include: install-terraform-cli.yml
+  
+- name: install packer cli
+  include: install-packer-cli.yml
+
+- name: install aws cli
+  include: install-aws-cli.yml
+
