--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -14,9 +14,13 @@
   git:
     repo: https://github.com/VundleVim/Vundle.vim.git
     dest: /home/{{user}}/.vim/bundle/Vundle.vim
-
+  
 - name: setup vim
   become_user: "{{user}}"
   copy:
-    src: tasks/vim/.vimrc
+    src: files/.vimrc
     dest: /home/{{user}}/
+
+- name: install vim plugins
+  become_user: "{{user}}"
+  command: "vim -E -s -c 'source /home/{{user}}/.vimrc' -c PluginInstall -c qa"
