--- a/roles/pcf/tasks/install-github-release.yml
+++ b/roles/pcf/tasks/install-github-release.yml
@@ -1,31 +1,31 @@
 ---
-- name: create default github release api url
+- name: Create default github release api url
   set_fact:
     api_url: https://api.github.com/repos/{{repository}}/releases/latest
   when: release_tag is not defined
 
-- name: create tagged github release api url
+- name: Create tagged github release api url
   set_fact:
     api_url: https://api.github.com/repos/{{repository}}/releases/tags/{{release_tag}}
   when: release_tag is defined
 
-- name: get github release info
+- name: Get github release info
   uri:
     url: "{{api_url}}"
     return_content: yes
     body_format: json
   register: release_info
 
-- name: get release download URL
+- name: Get release download URL
   set_fact:
     release_url: "{{ release_info.json | to_json | from_json | json_query(json_filter) | join('') }}"
   vars:
-    - json_filter: assets[?contains(name, '{{ release_asset_filter | default('linux') }}')].browser_download_url
+    - json_filter: assets[?(contains(name, '{{ release_asset_filter | default('linux') }}') && !contains(name, 'tar'))].browser_download_url
 
 - debug:
     msg: "Downloading release from: {{release_url}}"
 
-- name: download github release
+- name: Download github release
   get_url:
     url: "{{release_url}}"
     dest: "{{install_location}}"
