--- a/roles/tmux/files/.tmux.conf
+++ b/roles/tmux/files/.tmux.conf
@@ -24,9 +24,9 @@ set-option -g prefix C-space
 setw -g mode-keys vi
 
 # Start window numbering at 1
-set -g base-index 1  
+set -g base-index 1
 
-###### Keyboard Bindings ###### 
+###### Keyboard Bindings ######
 
 # Bind Ctrl - Space to quickly switch between windows
 bind C-space last-window
@@ -35,8 +35,11 @@ bind C-space last-window
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Use vim keybindings in copy mode
-bind -T copy-mode-vi 'v' send -X begin-selection
-bind -T copy-mode-vi 'y' send -X copy-selection
+# bind -T copy-mode-vi 'v' send -X begin-selection
+# bind -T copy-mode-vi 'y' send -X copy-selection
+
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
 
 ###############################
 
