Updated for bionic tmux version (2.6)

--- a/roles/tmux/files/.tmux.conf
+++ b/roles/tmux/files/.tmux.conf
@@ -35,11 +35,8 @@ bind C-space last-window
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Use vim keybindings in copy mode
-# bind -T copy-mode-vi 'v' send -X begin-selection
-# bind -T copy-mode-vi 'y' send -X copy-selection
-
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'y' send -X copy-selection
 
 ###############################
 
