Added support for installing docker ce

--- a/local.yml
+++ b/local.yml
@@ -12,6 +12,7 @@
 
   roles:
     - lastpass
+    - docker-ce
     - python
     - misc
     - pcf
@@ -30,5 +31,6 @@
 
   roles:
     - lastpass-user
+    - docker-user
     - vim
     - tmux
