Updated tmux config

--- a/roles/tmux/files/.tmux.conf
+++ b/roles/tmux/files/.tmux.conf
@@ -7,6 +7,7 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Set default terminal
 set -g default-terminal xterm-256color
@@ -37,6 +38,9 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 # Use vim keybindings in copy mode
 bind -T copy-mode-vi 'v' send -X begin-selection
 bind -T copy-mode-vi 'y' send -X copy-selection
+
+set -g @resurrect-save 'C-s'
+set -g @resurrect-restore 'C-r'
 
 ###############################
 
