--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -1,5 +1,9 @@
 - name: install tmux
   apt:
+    name: xdg-utils
+
+- name: install tmux
+  apt:
     name: tmux
 
 - name: install xclip
@@ -11,14 +15,14 @@
   copy:
     src: files/.tmux.conf
     dest: /home/{{user}}/
-    
+
 - name: creates directory
   become_user: "{{user}}"
   file:
     path: /home/{{user}}/.tmux/plugins/tpm
     state: directory
 
-- name: install tmux plugin manager 
+- name: install tmux plugin manager
   become_user: "{{user}}"
   git:
     repo: https://github.com/tmux-plugins/tpm
