--- a/roles/tanzu/tasks/install-azure-cli.yml
+++ b/roles/tanzu/tasks/install-azure-cli.yml
@@ -16,6 +16,7 @@
 - name: Add Microsoft Azure PPA
   apt_repository:
     repo: deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ "{{ubuntu_codename}}" main
+    mode: "0644"
 
 - name: Install Microsoft Azure cli
   apt:
