added support for installing kubectl

--- a/roles/tanzu/tasks/main.yml
+++ b/roles/tanzu/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: install kubectl
+  include: install-kubectl.yml
+  
 - name: install om cli
   include: install-github-release.yml
   vars:
