--- a/roles/tanzu/defaults/main.yml
+++ b/roles/tanzu/defaults/main.yml
@@ -36,3 +36,7 @@ jq_cli:
 texplate_cli:
   repository: pivotal-cf/texplate
   install_location: /usr/local/bin/texplate
+
+kubectl:
+  install_location: /usr/local/bin
+  version: 1.17.8
