--- a/roles/tanzu/tasks/main.yml
+++ b/roles/tanzu/tasks/main.yml
@@ -55,3 +55,5 @@
     repository: "{{texplate_cli.repository}}"
     install_location: "{{texplate_cli.install_location}}"
 
+- name: install tkgi cli
+  include: install-tkgi-cli.yml
